--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   </main>
   <footer>
-    <!-- place footer here -->
+    <p>&copy; 2023 - Adriana Luksová, IT1</p>
   </footer>
   <!-- Bootstrap JavaScript Libraries -->
     <script src="js/bootstrap.bundle.min.js"></script>
